--- a/src/main/resources/com/example/tic_tac_toe/game.fxml
+++ b/src/main/resources/com/example/tic_tac_toe/game.fxml
@@ -7,43 +7,50 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tic_tac_toe.Game">
-   <children>
-      <GridPane fx:id="gridPane" layoutX="195.0" layoutY="210.0" prefHeight="322.0" prefWidth="432.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" />
-            <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" />
-            <Button maxWidth="500.0" mnemonicParsing="false" prefHeight="500.0" GridPane.columnIndex="2" />
-            <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" prefHeight="114.0" prefWidth="149.0" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="111.0" prefWidth="146.0" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-               <GridPane.margin>
-                  <Insets top="1.0" />
-               </GridPane.margin>
-            </Button>
-         </children>
-      </GridPane>
-      <Label fx:id="resultLabel" alignment="CENTER" layoutX="266.0" layoutY="26.0" prefHeight="75.0" prefWidth="273.0" text="TIC TAC TOE" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
-         <font>
-            <Font name="Calibri Bold" size="52.0" />
-         </font></Label>
-      <Button fx:id="newgame" layoutX="282.0" layoutY="114.0" mnemonicParsing="false" onAction="#Start_newgame" prefHeight="66.0" prefWidth="242.0" style="-fx-background-color: lightGrey;" text="New Game">
-         <font>
-            <Font name="Arial" size="24.0" />
-         </font></Button>
-      <Line  fx:id="winline" startX="0" startY="0" endX="0" endY="0" stroke="red" strokeWidth="5.0" visible="false" />
+    <children>
+        <!-- StackPane to overlay GridPane and winline -->
+        <StackPane layoutX="195.0" layoutY="210.0" prefHeight="322.0" prefWidth="432.0">
+            <GridPane fx:id="gridPane" prefHeight="322.0" prefWidth="432.0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                </rowConstraints>
+                <children>
+                    <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" />
+                    <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" />
+                    <Button maxWidth="500.0" mnemonicParsing="false" prefHeight="500.0" GridPane.columnIndex="2" />
+                    <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.rowIndex="1" />
+                    <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <Button mnemonicParsing="false" prefHeight="114.0" prefWidth="149.0" GridPane.rowIndex="2" />
+                    <Button mnemonicParsing="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="111.0" prefWidth="146.0" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <GridPane.margin>
+                            <Insets top="1.0" />
+                        </GridPane.margin>
+                    </Button>
+                </children>
+            </GridPane>
+            <!-- Line for indicating winning row/column/diagonal -->
+            <Line fx:id="winline" startX="0" startY="0" endX="0" endY="0" stroke="red" strokeWidth="5.0" visible="false" />
+        </StackPane>
 
-   </children>
+        <!-- Other components outside the StackPane -->
+        <Label fx:id="resultLabel" alignment="CENTER" layoutX="266.0" layoutY="26.0" prefHeight="75.0" prefWidth="273.0" text="TIC TAC TOE" textAlignment="CENTER" textOverrun="WORD_ELLIPSIS">
+            <font>
+                <Font name="Calibri Bold" size="52.0" />
+            </font>
+        </Label>
+        <Button fx:id="newgame" layoutX="282.0" layoutY="114.0" mnemonicParsing="false" onAction="#Start_newgame" prefHeight="66.0" prefWidth="242.0" style="-fx-background-color: lightGrey;" text="New Game">
+            <font>
+                <Font name="Arial" size="24.0" />
+            </font>
+        </Button>
+    </children>
 </AnchorPane>
